clusters/production/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servarr-sabnzbd
  namespace: servarr
  labels:
    app.kubernetes.io/name: sabnzbd
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sabnzbd
